--- a/public/index.html
+++ b/public/index.html
@@ -31,19 +31,13 @@
 
     <!-- META -->
     <title>My DAO</title>
-    <meta
-      name="description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
-    />
+    <meta name="description" content="DemonSlayer DAO" />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://buildspace.so/" />
     <meta property="og:title" content="My DAO" />
-    <meta
-      property="og:description"
-      content="Checkout my DAO built with _buildspace & thirdweb_!"
-    />
+    <meta property="og:description" content="DemonSlayer DAO" />
     <meta
       property="og:image"
       content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
@@ -53,10 +47,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://buildspace.so/" />
     <meta property="twitter:title" content="My DAO" />
-    <meta
-      property="twitter:description"
-      content="Check out my DAO built with @_buildspace & @thirdweb_!"
-    />
+    <meta property="twitter:description" content="DemonSlayer DAO!" />
     <meta
       property="twitter:image"
       content="https://ipfs.thirdweb.com/ipfs/QmP45dfW7n6oM8DKH13nzdQrbukVC3EBQfo87N2bHczMV9"
